update swagger, support delete for user and post
