# api/routes/post_router.go
@@ -20,4 +20,5 @@ func NewPostRoutes(handler lib.HttpHandler, postController controllers.PostContr
 func (r PostRoutes) Setup() {
 	r.handler.Engine.GET("/posts", r.postController.List)
 	r.handler.Engine.GET("/posts/:id", r.postController.Detail)
+	r.handler.Engine.DELETE("/posts/:id", r.postController.Destroy)
 }
