# api/routes/user_router.go
@@ -20,4 +20,5 @@ func NewUserRoutes(handler lib.HttpHandler, userController controllers.UserContr
 func (a UserRoutes) Setup() {
 	a.handler.Engine.GET("/users", a.userController.List)
 	a.handler.Engine.GET("/users/:username", a.userController.Detail)
+	a.handler.Engine.DELETE("/users/:username", a.userController.Destroy)
 }
